WIP checkpoint - indexer's EXPAND_CONFIG is running without error; output looks OK but may be missing some data